# shunshou

./: .gitignore  README.md  article.json  article.md  article_bytes.json  article_escaped.txt  b64.txt  chunks.txt  paste_article.js  pyproject.toml  release_notes.txt
.github/workflows/: publish.yml
shunshou/: __init__.py  cli.py
shunshou/modules/: clipboard.py  clipfmt.py  gif.py  image.py  links.py  md2img.py  organize.py  qr.py  rename.py  style.py
